<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"

    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:paddingBottom="12dp"
        android:orientation="vertical"
        android:id="@+id/bannerConstraint"
        android:layout_width="match_parent"
        android:background="@color/intaka"
        android:layout_height="wrap_content">

        <TextView
            android:paddingTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bird_of_the_day"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"/>

        <TextView
            android:paddingTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameBirdOfTheDay"
            android:text="@string/bird_of_the_day_name"
            android:textSize="26sp"
            android:paddingRight="24dp"
            android:paddingBottom="12dp"
            android:paddingLeft="24dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/imgBirdOfTheDay"
            android:layout_width="250dp"
            android:layout_height="240dp"
            android:scaleType="centerCrop"
            android:paddingTop="20dp"
            android:src="@drawable/bird2"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_marginTop="25sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:justificationMode="inter_word"
            android:text="@string/bird_of_the_day_description"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:id="@+id/descriptionBirdOfTheDay"
            android:paddingBottom="24dp"
            />


    </LinearLayout>

</androidx.cardview.widget.CardView>