<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".individualSpeciesView">

    <include layout="@layout/toolbar"/>
        <include layout="@layout/backbutton"/>


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homeButton"
        android:padding="12dp"
        android:background="@null"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/return_home"
        android:src="@drawable/baseline_home_24"
       app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/detailImage"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/bird1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialToolbar"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/star_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="image of star"
        android:src="@drawable/star_icon_full"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detailImage"
        app:layout_constraintTop_toTopOf="@id/detailImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailName"
        android:layout_marginTop="16dp"
        android:text="Bird 1"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:layout_marginStart="16dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"

        app:layout_constraintTop_toBottomOf="@+id/detailImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/detailDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:justificationMode="inter_word"
        android:padding="12dp"
        android:text="@string/descriptionTest"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="6dp"
        android:id="@+id/source"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tssLayout"
        android:text="@string/source"/>

    <LinearLayout
        android:id="@+id/tssLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
        android:id="@+id/tssButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_play_circle_outline_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>